basic action for toggling light

--- a/hub/angular/static/ng-templates/startpage.html
+++ b/hub/angular/static/ng-templates/startpage.html
@@ -5,11 +5,11 @@
     Prognoser
 </div>
 <div class="row" ng-controller="StartpageDeviceController">
-    <div class="col-xs-4" ng-repeat="device in devices">
+    <div class="col-xs-2" ng-repeat="device in devices">
         <h4><a href="#/device/{{ device.id }}/">{{ device.name }}</a></h4>
-        <img  static-src="img/light_on.png" />
-        <img  static-src="img/light_off.png" />
-        <div ng-if="device.state">
-        </div>
+        <span ng-click="toggleDevice(device);">
+            <img ng-if="!device.state" static-src="img/light_off.png" />
+            <img ng-if="device.state" static-src="img/light_on.png" />
+        </span>
     </div>
 </div>
