--- a/hub/device/static/ng-templates/device-tiny.html
+++ b/hub/device/static/ng-templates/device-tiny.html
@@ -10,5 +10,6 @@
             <img style="opacity: {{ device.state / 100 }};" ng-if="device.state" static-src="img/light_on.png" />
         </div>
         <span>{{ device.state }}</span>
+      </md-slider>
     </span>
 </div>
