--- a/hub/device/static/ng-templates/device-tiny.html
+++ b/hub/device/static/ng-templates/device-tiny.html
@@ -2,17 +2,18 @@
     <div layout="column" layout-align="start center">
         <h4><a href="#/device/{{ device.id }}/">{{ device.name }}</a></h4>
 
-        <div ng-if="!device.is_dimmable" ng-click="toggleDevice(device);">
+        <div ng-if="!device.is_dimmable" class="device" ng-click="toggleDevice(device);">
             <img ng-if="!device.state" static-src="img/light_off.png" />
             <img ng-if="device.state" static-src="img/light_on.png" />
         </div>
 
         <div ng-if="device.is_dimmable" class="device dimmable" ng-click="toggleDevice(device);">
-            <img style="opacity: {{ device.state / 100 }};" static-src="img/light_on.png" />
+            <img style="opacity: {{ device.state / 255 }};" static-src="img/light_on.png" />
         </div>
     </div>
 
-    <div layout="row" layout-align="center center" ng-if="device.is_dimmable">
-        <md-slider flex="80" ng-model="device.state" min="0" max="100" aria-label="Brightness"></md-slider>
+    <div layout="row" layout-align="center center">
+        <md-slider ng-if="device.is_dimmable" flex="80" ng-model="device.state" min="0" max="255" aria-label="Brightness" ng-change="test(device);"></md-slider>
+        <md-switch ng-if="!device.is_dimmable" ng-model="device.state" ng-true-value="1" ng-false-value="0" aria-label="State"  ng-change="test(device);"></md-switch>
     </div>
 </div>
