--- a/hub/angular/static/ng-templates/startpage.html
+++ b/hub/angular/static/ng-templates/startpage.html
@@ -15,3 +15,9 @@
         <div include="device-tiny.html"></div>
     </div>
 </div>
+
+<div layout="row" layout-align="space-between center" layout-wrap ng-controller="StartpageDeviceGroupController">
+    <div flex="20" ng-repeat="group in groups">
+        <div include="device-group-tiny.html"></div>
+    </div>
+</div>
