--- a/hub/angular/static/ng-templates/startpage.html
+++ b/hub/angular/static/ng-templates/startpage.html
@@ -12,7 +12,7 @@
 
 <div layout="row" layout-align="space-between center" layout-wrap ng-controller="StartpageDeviceController">
     <div flex="20" ng-repeat="device in devices">
-        <div include="device-tiny.html"></div>
+        <div include="device-teaser.html"></div>
     </div>
 </div>
 
