--- a/hub/device/static/ng-templates/device-detail.html
+++ b/hub/device/static/ng-templates/device-detail.html
@@ -5,7 +5,7 @@
             <div layout="column">
                 <md-list>
                     <md-item>
-                        Nod: <a href="#/node/{{ device.node.id }}">{{ device.node.name }}</a>
+                        Nod: <a href="#/nodes/{{ device.node.id }}">{{ device.node.name }}</a>
                     </md-item>
                 </md-list>
             </div>
