--- a/hub/device/static/ng-templates/device-detail.html
+++ b/hub/device/static/ng-templates/device-detail.html
@@ -1,5 +1,7 @@
 <div layout="column" class="layout-content">
-    <div include="device-tiny.html"></div>
+    <div include="device-teaser.html"></div>
+    <md-card>
+        <md-card-content>
     <div layout="row" layout-align="center start">
         <div flex="50">
             <div layout="column">
@@ -20,4 +22,8 @@
     <div layout="row" layout="end start">
         <md-button ng-href="#/device/{{ device.id }}/edit/">Redigera</md-button>
     </div>
+
+
+    </md-card-content>
+    </md-card>
 </div>
