--- a/hub/node/static/ng-templates/node-teaser.html
+++ b/hub/node/static/ng-templates/node-teaser.html
@@ -1,11 +1,15 @@
 <div layout="column">
-    <div layout="column" layout-align="start center">
-        <h2>
-            <a href="#/nodes/{{ node.id }}/">{{ node.name }}</a>
-        </h2>
-    </div>
+    <md-card>
+        <md-card-content>
+            <div layout="column" layout-align="start center">
+                <h2>
+                    <a href="#/nodes/{{ node.id }}/">{{ node.name }}</a>
+                </h2>
+            </div>
 
-    <div layout="row" layout-align="center center">
-        hej
-    </div>
+            <div layout="row" layout-align="center center">
+                hej
+            </div>
+        </md-card-content>
+    </md-card>
 </div>
