--- a/hub/angular/static/ng-templates/startpage.html
+++ b/hub/angular/static/ng-templates/startpage.html
@@ -1,5 +1,5 @@
 <div layout="row" layout-align="space-between center" ng-controller="StartpageSensorController">
-    <div flex flex-sm="100" flex-md="50" ng-repeat="sensor in sensors">
+    <div flex flex-sm="50" ng-repeat="sensor in sensors">
         <div include="sensor-teaser.html"></div>
     </div>
 </div>
