--- a/hub/sensor/static/ng-templates/sensor-teaser.html
+++ b/hub/sensor/static/ng-templates/sensor-teaser.html
@@ -2,7 +2,7 @@
     <md-card-content>
         <div layout="column" layout-align="start center">
             <h4>
-                {{ sensor.name }}
+                <a ng-href="#/sensors/{{ sensor.id }}/">{{ sensor.name }}</a>
             </h4>
 
             <div>
