Weather and settings

--- a/hub/angular/static/ng-templates/startpage.html
+++ b/hub/angular/static/ng-templates/startpage.html
@@ -11,7 +11,7 @@
                 <h4><a href="#/weather/">Väder</a></h4>
             </div>
             <div layout="row" layout-align="space-between center">
-                <div flex ng-repeat="forecast in forecasts">
+                <div flex flex="20" ng-repeat="forecast in forecasts">
                     <div include="forecast-teaser.html"></div>
                 </div>
             </div>
