--- a/hub/angular/static/ng-templates/startpage.html
+++ b/hub/angular/static/ng-templates/startpage.html
@@ -10,8 +10,8 @@
             <div layout="row" layout-align="center">
                 <h4><a href="#/weather/">Väder</a></h4>
             </div>
-            <div layout="row" layout-align="space-between center">
-                <div flex flex="20" ng-repeat="forecast in forecasts">
+            <div layout="row" layout-align="space-between left" layout-wrap>
+                <div flex="12" flex-lg="20" flex-md="33" flex-sm="50" ng-repeat="forecast in forecasts">
                     <div include="forecast-teaser.html"></div>
                 </div>
             </div>
