--- a/hub/forecast/static/ng-templates/weather.html
+++ b/hub/forecast/static/ng-templates/weather.html
@@ -16,7 +16,7 @@
                     <i class="wi wi-thermometer"></i>
                     &nbsp;
                     <span>
-                        {{ forecast.t }}°C
+                        {{ forecast.t }}°
                     </span>
                     &nbsp;
                     {{ forecast.pit }} mm
