set auth token cookie

--- a/hub/authentication/static/ng-templates/login.html
+++ b/hub/authentication/static/ng-templates/login.html
@@ -9,5 +9,5 @@
         <input ng-keyup="$event.keyCode == 13 && login()" type="password" ng-model="password"/>
     </md-input-container>
 
-    <md-button class="md-raised md-primary" ng-click="login()">Primary</md-button>
+    <md-button class="md-raised md-primary" ng-click="login()">Logga in</md-button>
 </div>
