teaser with margin

--- a/hub/forecast/static/ng-templates/forecast-teaser.html
+++ b/hub/forecast/static/ng-templates/forecast-teaser.html
@@ -1,4 +1,4 @@
-<div layout="column" layout-align="start center">
+<div layout="column" layout-margin layout-align="start center">
     <div layout="row" ng-if="forecast.valid_time">
         {{ forecast.valid_time | date : "HH:mm" }}
     </div>
