moar better icons

--- a/hub/forecast/static/ng-templates/directive/weather-icon.html
+++ b/hub/forecast/static/ng-templates/directive/weather-icon.html
@@ -1,3 +1,4 @@
 <div ng-controller="WeatherIconController">
     <i class="wi {{ weather_icon_class }}"></i>
+    <span>{{ weather_icon_class }}</span>
 </div>
