--- a/hub/angular/static/ng-templates/startpage.html
+++ b/hub/angular/static/ng-templates/startpage.html
@@ -1,5 +1,5 @@
-<div layout="row" layout-align="center" ng-controller="StartpageSensorController">
-    <div flex flex-sm="50" ng-repeat="sensor in sensors">
+<div layout="row" layout-align="center" layout-wrap ng-controller="StartpageSensorController">
+    <div flex flex-sm="50" flex-md="33" flex-lg="20" ng-repeat="sensor in sensors">
         <div include="sensor-teaser.html"></div>
     </div>
 </div>
