--- a/hub/sensor/static/ng-templates/sensor-teaser.html
+++ b/hub/sensor/static/ng-templates/sensor-teaser.html
@@ -1,13 +1,15 @@
-<md-card>
-    <md-card-content>
-        <div layout="column" layout-align="start center">
-            <h4>
-                <a ng-href="#/sensors/{{ sensor.id }}/">{{ sensor.name }}</a>
-            </h4>
+<div layout="column">
+    <md-card>
+        <md-card-content>
+            <div layout="column" layout-align="start center">
+                <h4>
+                    <a ng-href="#/sensors/{{ sensor.id }}/">{{ sensor.name }}</a>
+                </h4>
 
-            <div>
-                <span>{{ sensor.temperature }}°C</span> <span>{{ sensor.humidity }}%</span>
+                <div>
+                    <span>{{ sensor.temperature }}°C</span> <span>{{ sensor.humidity }}%</span>
+                </div>
             </div>
-        </div>
-    </md-card-content>
-</md-card>
+        </md-card-content>
+    </md-card>
+</div>
