--- a/hub/angular/static/ng-templates/startpage.html
+++ b/hub/angular/static/ng-templates/startpage.html
@@ -1,11 +1,23 @@
-<div layout="row" layout-align="center" layout-wrap ng-controller="StartpageSensorController">
-    <div flex flex-sm="50" flex-md="33" flex-lg="20" ng-repeat="sensor in sensors">
+<div layout="row" layout-align="space-between center" layout-wrap ng-controller="StartpageDeviceController">
+    <div flex flex-sm="50" flex-md="33" flex-lg="20" ng-repeat="device in devices">
+        <div include="device-teaser.html"></div>
+    </div>
+</div>
+
+<div layout="row" layout-align="space-between center" layout-wrap ng-controller="StartpageDeviceGroupController">
+    <div flex="20" flex-sm="100" flex-md="50" flex-lg="33" ng-repeat="group in groups">
+        <div include="device-group-teaser.html"></div>
+    </div>
+</div>
+
+<div layout="row" layout-align="space-between center" layout-wrap ng-controller="StartpageSensorController">
+    <div flex="20" flex-sm="33" flex-md="25" flex-lg="20" ng-repeat="sensor in sensors">
         <div include="sensor-teaser.html"></div>
     </div>
 </div>
 
 <div layout="row" layout-align="center" ng-controller="StartpageForecastController">
-    <md-card flex>
+    <md-card flex ng-show="forecast">
         <md-card-content>
             <div layout="row" layout-align="center">
                 <h4><a href="#/weather/">Väder</a></h4>
@@ -19,14 +31,3 @@
     </md-card>
 </div>
 
-<div layout="row" layout-align="space-between center" layout-wrap ng-controller="StartpageDeviceController">
-    <div flex="20" flex-sm="100" flex-lg="33" flex-md="50" ng-repeat="device in devices">
-        <div include="device-teaser.html"></div>
-    </div>
-</div>
-
-<div layout="row" layout-align="space-between center" layout-wrap ng-controller="StartpageDeviceGroupController">
-    <div flex="20" flex-sm="100" flex-lg="33" flex-md="50" ng-repeat="group in groups">
-        <div include="device-group-teaser.html"></div>
-    </div>
-</div>
