--- a/hub/angular/static/ng-templates/startpage.html
+++ b/hub/angular/static/ng-templates/startpage.html
@@ -17,7 +17,7 @@
 </div>
 
 <div layout="row" layout-align="center" ng-controller="StartpageForecastController">
-    <md-card flex ng-show="forecast">
+    <md-card flex ng-show="forecasts">
         <md-card-content>
             <div layout="row" layout-align="center">
                 <h4><a href="#/weather/">Väder</a></h4>
