--- a/hub/device/static/ng-templates/device-teaser.html
+++ b/hub/device/static/ng-templates/device-teaser.html
@@ -1,5 +1,16 @@
 <div ng-controller="DeviceController" layout="column" layout-xs="row">
-    <div layout="column" layout-xs="row" layout-align="start center" flex-xs="50">
+    <div layout="column" layout-xs="row" layout-align="start center" flex-xs="40">
+        <div layout="column" hide-gt-xs>
+            <div ng-if="!device.is_dimmable" class="device" ng-click="toggleDevice(device);">
+                <img ng-if="!device.state" static-src="img/xs_light_off.png" />
+                <img ng-if="device.state" static-src="img/xs_light_on.png" />
+            </div>
+
+            <div ng-if="device.is_dimmable" class="device dimmable dimmable-xs" ng-click="toggleDevice(device);">
+                <img style="opacity: {{ device.state / 255 }};" static-src="img/xs_light_on.png" />
+            </div>
+        </div>
+
         <h4><a href="#/device/{{ device.id }}/">{{ device.name }}</a></h4>
 
         <div hide-xs>
@@ -14,7 +25,7 @@
         </div>
     </div>
 
-    <div layout="row" layout-align="center center" flex-xs="50">
+    <div layout="row" layout-align="center center" flex-xs="60">
         <md-slider ng-if="device.is_dimmable" flex="80" ng-model="device.state" min="0" max="255" aria-label="Brightness" ng-change="brightnessSliderChange(device);"></md-slider>
         <md-switch ng-if="!device.is_dimmable" ng-model="device.state" ng-true-value="1" ng-false-value="0" aria-label="State"  ng-change="sendDeviceState(device);"></md-switch>
     </div>
