Mobile first sensors

--- a/hub/sensor/static/ng-templates/sensor-detail.html
+++ b/hub/sensor/static/ng-templates/sensor-detail.html
@@ -1,4 +1,4 @@
-<div layout="column" class="layout-content">
+<div layout="column" class="layout-content" layout-align="start center">
     <h1>
         {{ sensor.name }}
     </h1>
