--- a/hub/angular/static/ng-templates/startpage.html
+++ b/hub/angular/static/ng-templates/startpage.html
@@ -11,8 +11,8 @@
     </div>
 </div>
 
-<div layout="row" layout-align="space-between center" layout-wrap ng-controller="StartpageSensorController">
-    <div flex="20" flex-xs="50" flex-sm="50" flex-md="33" flex-lg="25" ng-repeat="sensor in sensors">
+<div class="md-padding" layout="row" layout-align="space-between center" layout-wrap ng-controller="StartpageSensorController">
+    <div flex="20" flex-xs="100" flex-sm="50" flex-md="33" flex-lg="25" ng-repeat="sensor in sensors">
         <div include="sensor-teaser.html"></div>
     </div>
 </div>
