--- a/hub/sensor/static/ng-templates/sensor-teaser.html
+++ b/hub/sensor/static/ng-templates/sensor-teaser.html
@@ -1,15 +1,13 @@
-<div layout="column">
-    <md-card>
-        <md-card-content>
-            <div layout="column" layout-align="start center">
-                <h4>
-                    <a ng-href="#/sensors/{{ sensor.id }}/">{{ sensor.name }}</a>
-                </h4>
+<div layout="column" layout-xs="row" layout-align="start center" layout-align-xs="space-around center">
+    <div flex-xs="50">
+        <h4>
+            <a ng-href="#/sensors/{{ sensor.id }}/">{{ sensor.name }}</a>
+        </h4>
+    </div>
 
-                <div>
-                    <span>{{ sensor.temperature }}°C</span> <span>{{ sensor.humidity }}%</span>
-                </div>
-            </div>
-        </md-card-content>
-    </md-card>
+    <div flex-xs="50">
+        <div>
+            <span>{{ sensor.temperature }}°C</span> <span>{{ sensor.humidity }}%</span>
+        </div>
+    </div>
 </div>
