--- a/hub/forecast/static/ng-templates/forecast-teaser.html
+++ b/hub/forecast/static/ng-templates/forecast-teaser.html
@@ -1,4 +1,4 @@
-<div layout="column" layout-xs="row" layout-margin layout-align="start center" layout-align-xs="space-around center">
+<div layout="column" layout-xs="row" layout-padding layout-align="start center" layout-align-xs="space-around center">
     <div ng-if="forecast.valid_time">
         {{ forecast.valid_time | date : "HH:mm" }}
     </div>
