Show only when raining

--- a/hub/forecast/static/ng-templates/forecast-teaser.html
+++ b/hub/forecast/static/ng-templates/forecast-teaser.html
@@ -37,7 +37,7 @@
                     </span>
             </div>
             <div class="percipitation" flex-xs="33">
-                    <span>
+                    <span ng-show="forecast.pit > 0">
                         {{ forecast.pit }}<span>mm</span>
                     </span>
             </div>
