--- a/hub/angular/static/ng-templates/startpage.html
+++ b/hub/angular/static/ng-templates/startpage.html
@@ -1,3 +1,8 @@
+<div ng-controller="ToolbarController" class="floating-toolbar">
+    <md-button aria-label="menu" class="md-fab md-primary" ng-click="refresh()">
+        <md-icon aria-label="Menu" md-svg-icon="refresh-white"></md-icon>
+    </md-button>
+</div>
 
 <md-content class="md-padding" layout="row" layout-align="space-between center" layout-wrap ng-controller="StartpageDeviceController">
     <div flex flex-xs="100" flex-sm="50" flex-md="33" flex-lg="20" ng-repeat="device in devices">
