GUI now uses html5 mode

--- a/hub/angular/static/ng-templates/admin/index.html
+++ b/hub/angular/static/ng-templates/admin/index.html
@@ -1,11 +1,11 @@
 <div layout="row" layout-align="center">
     <div flex>
-        <a ng-href="#/nodes">
+        <a ng-href="/nodes">
             Noder
         </a>
     </div>
     <div flex>
-        <a href="#/administration/recent-signals/">
+        <a href="/administration/recent-signals/">
             Senaste signaler
         </a>
     </div>
