--- a/hub/device/static/ng-templates/device-teaser.html
+++ b/hub/device/static/ng-templates/device-teaser.html
@@ -14,7 +14,7 @@
         -->
 
         <div flex-order-xs="2">
-            <h4><a href="#/device/{{ device.id }}/">{{ device.name }}</a></h4>
+            <h4><a href="/device/{{ device.id }}/">{{ device.name }}</a></h4>
         </div>
 
         <div flex-order-xs="1">
