--- a/hub/node/static/ng-templates/node-teaser.html
+++ b/hub/node/static/ng-templates/node-teaser.html
@@ -3,7 +3,7 @@
         <md-card-content>
             <div layout="column" layout-align="start center">
                 <h2>
-                    <a href="#/nodes/{{ node.id }}/">{{ node.name }}</a>
+                    <a href="/nodes/{{ node.id }}/">{{ node.name }}</a>
                 </h2>
             </div>
 
