--- a/hub/angular/static/ng-templates/startpage.html
+++ b/hub/angular/static/ng-templates/startpage.html
@@ -10,17 +10,18 @@
     </div>
 </md-content>
 
-<div layout="row" layout-align="space-between center" layout-wrap ng-controller="StartpageDeviceGroupController">
-    <div flex="20" flex-xs="100" flex-sm="100" flex-md="50" flex-lg="33" ng-repeat="group in groups">
+
+<md-content class="md-padding" layout="row" layout-align="space-between center" layout-wrap ng-controller="StartpageDeviceGroupController">
+    <div flex flex-xs="100" flex-sm="50" flex-md="33" flex-lg="20" ng-repeat="group in groups">
         <div include="device-group-teaser.html"></div>
     </div>
-</div>
+</md-content>
 
-<div class="md-padding" layout="row" layout-align="space-between center" layout-wrap ng-controller="StartpageSensorController">
+<md-content class="md-padding" layout="row" layout-align="space-between center" layout-wrap ng-controller="StartpageSensorController">
     <div flex="20" flex-xs="100" flex-sm="50" flex-md="33" flex-lg="25" ng-repeat="sensor in sensors">
         <div include="sensor-teaser.html"></div>
     </div>
-</div>
+</md-content>
 
 <div layout="row" layout-align="center" ng-controller="StartpageForecastController">
     <md-card flex ng-show="forecasts">
