--- a/hub/device/static/ng-templates/device-group-teaser.html
+++ b/hub/device/static/ng-templates/device-group-teaser.html
@@ -1,19 +1,19 @@
-<div ng-controller="DeviceGroupController" layout="column">
-    <md-card>
-        <md-card-content>
-            <div layout="column" layout-align="start center">
-                <h4><a href="#/devicegroup/{{ group.id }}/">{{ group.name }}</a></h4>
+<div ng-controller="DeviceGroupController"  layout="column" layout-xs="row">
+    <div layout="column" layout-xs="row" layout-align="start center" flex-xs="40">
+        <div flex-order-xs="2">
+            <h4><a href="#/devicegroup/{{ group.id }}/">{{ group.name }}</a></h4>
+        </div>
 
-                <div class="device" ng-click="toggleDeviceGroup(group);">
-                    <img ng-if="!group.state" static-src="img/light_off.png" />
-                    <img ng-if="group.state" static-src="img/light_on.png" />
-                </div>
+        <div flex-order-xs="1">
+            <div class="device" ng-click="toggleDeviceGroup(group);">
+                <div ng-if="!group.state" class="device light light-off"></div>
+                <div ng-if="group.state" class="device light light-on"></div>
             </div>
-
-            <div layout="row" layout-align="center center">
-                <md-switch ng-model="group.state" aria-label="State" ng-change="sendDeviceGroupState(group);"></md-switch>
-            </div>
-
-        </md-card-content>
-    </md-card>
+        </div>
+    </div>
+    <div layout="row" layout-align="center center" flex-xs="60">
+        <div layout="row" layout-align="center center">
+            <md-switch ng-model="group.state" aria-label="State" ng-change="sendDeviceGroupState(group);"></md-switch>
+        </div>
+    </div>
 </div>
