--- a/hub/angular/static/ng-templates/startpage.html
+++ b/hub/angular/static/ng-templates/startpage.html
@@ -15,6 +15,11 @@
             <div include="room-teaser.html"></div>
         </div>
     </md-content>
+    <md-content class="md-padding" layout="row" layout-align="space-between center" layout-wrap>
+        <div flex flex-xs="100" flex-sm="50" flex-md="33" flex-lg="20" ng-repeat="placement in placements">
+            <div include="placement-teaser.html"></div>
+        </div>
+    </md-content>
 </div>
 
 <md-content class="md-padding" layout="row" layout-align="space-between center" layout-wrap ng-controller="StartpageDeviceGroupController">
