--- a/hub/angular/static/ng-templates/startpage.html
+++ b/hub/angular/static/ng-templates/startpage.html
@@ -3,7 +3,7 @@
         <md-icon aria-label="Menu" md-svg-icon="refresh-white"></md-icon>
     </md-button>
 </div>
-
+<!--
 <div ng-controller="StartpageDeviceController">
     <md-content class="md-padding" layout="row" layout-align="space-between center" layout-wrap>
         <div flex flex-xs="100" flex-sm="50" flex-md="33" flex-lg="20" ng-repeat="device in devices">
@@ -34,14 +34,16 @@
     </div>
 </md-content>
 
+-->
 <div layout="row" layout-align="center" ng-controller="StartpageForecastController">
-    <md-card flex ng-show="forecasts">
+    <md-card flex ng-show="grouped_forecasts">
         <md-card-content>
             <div layout="row" layout-align="center">
                 <h4><a href="#/weather/">Väder</a></h4>
             </div>
             <div layout="row" layout-align="space-between left" layout-wrap>
-                <div flex="12" flex-lg="20" flex-md="33" flex-sm="100" flex-xs="100" ng-repeat="forecast in forecasts">
+                <div flex="12" flex-lg="20" flex-md="33" flex-sm="100" flex-xs="100" ng-repeat="(date_string, forecasts) in grouped_forecasts">
+                    <!--
                     <div hide-gt-xs ng-show="forecast.valid_time">
                         <div ng-show="(forecast.valid_time|date:'d') != (forecasts[$index -1].valid_time|date:'d')">
                             <hr/>
@@ -52,7 +54,18 @@
                             <hr/>
                         </div>
                     </div>
-                    <div include="forecast-teaser.html"></div>
+                    -->
+
+                    <div layout="column" layout-xs="row" layout-padding layout-align="start center" layout-align-xs="space-around center">
+
+                        <div>{{ date_string }}</div>
+                        <div style="text-transform: capitalize">
+                            {{ date_string | date : "EEEE" }}
+                        </div>
+
+
+                    </div>
+                    <div ng-repeat="forecast in forecasts" include="forecast-teaser.html"></div>
                 </div>
             </div>
         </md-card-content>
