--- a/hub/angular/static/ng-templates/startpage.html
+++ b/hub/angular/static/ng-templates/startpage.html
@@ -5,6 +5,32 @@
 </div>
 
 <div ng-controller="StartpageDeviceController">
+
+    <md-card flex>
+        <md-card-content>
+            <div layout="column" layout-align="center" ng-repeat="(category_name, categories) in device_categories">
+                <div layout="column" layout-align="space-between center" ng-repeat="category in categories">
+                    <div flex>
+                        <h5>
+                            {{ category.name }}
+                        </h5>
+                    </div>
+                    <div flex layout="row" layout-align="space-between center" layout-wrap>
+                        <div flex flex-xs="100" ng-repeat="device in category.devices">
+                            <div include="device-teaser.html" ng-repeat="device in category.devices"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div layout="row" layout-align="center" ng-show="!device_categories">
+                Laddar..
+            </div>
+        </md-card-content>
+    </md-card>
+
+
+    <!--
     <md-content class="md-padding" layout="row" layout-align="space-between center" layout-wrap>
         <div flex flex-xs="100" flex-sm="50" flex-md="33" flex-lg="20" ng-repeat="device in devices">
             <div include="device-teaser.html"></div>
@@ -20,13 +46,9 @@
             <div include="placement-teaser.html"></div>
         </div>
     </md-content>
+    -->
 </div>
 
-<md-content class="md-padding" layout="row" layout-align="space-between center" layout-wrap ng-controller="StartpageDeviceGroupController">
-    <div flex flex-xs="100" flex-sm="50" flex-md="33" flex-lg="20" ng-repeat="group in groups" ng-show="(group.show_only_when === 'always') || (group.show_only_when === group.state)">
-        <div include="device-group-teaser.html"></div>
-    </div>
-</md-content>
 
 <md-content class="md-padding" layout="row" layout-align="space-between center" layout-wrap ng-controller="StartpageSensorController">
     <div flex="20" flex-xs="100" flex-sm="50" flex-md="33" flex-lg="25" ng-repeat="sensor in sensors">
