--- a/hub/angular/static/ng-templates/startpage.html
+++ b/hub/angular/static/ng-templates/startpage.html
@@ -7,16 +7,14 @@
 <div ng-controller="StartpageDeviceController">
 
     <md-card flex ng-repeat="(category_name, categories) in device_categories">
-        <md-card-content ng-repeat="category in categories">
+        <md-card-content ng-repeat="category in categories" ng-show="category | showCategory">
             <div layout="column">
-                <div flex>
-                    <h5>
-                        {{ category.name }}
-                    </h5>
-                </div>
+                <h4>
+                    {{ category.name }}
+                </h4>
                 <div flex layout="row" layout-align="space-between center" layout-wrap>
                     <div flex flex-xs="100" flex-md="33" flex-lg="20" ng-repeat="device in category.devices">
-                        <div include="device-teaser.html" ng-repeat="device in category.devices"></div>
+                        <div include="device-teaser.html"></div>
                     </div>
                 </div>
             </div>
