Create hourly mean log instances on save, update sensor model

--- a/hub/sensor/static/ng-templates/sensor-teaser.html
+++ b/hub/sensor/static/ng-templates/sensor-teaser.html
@@ -12,9 +12,9 @@
             </div>
         </div>
     </div>
-    <div layout="row" layout-align="space-between center" ng-show="sensor.changed | isold:600">
+    <div layout="row" layout-align="space-between center" ng-show="sensor.updated | isold:600">
         <div flex-xs="100">
-            Uppdaterad senast {{ sensor.changed | date : "medium"}}
+            Uppdaterad senast {{ sensor.updated | date : "medium"}}
         </div>
     </div>
 </div>
