--- a/hub/sensor/static/ng-templates/sensor-teaser.html
+++ b/hub/sensor/static/ng-templates/sensor-teaser.html
@@ -17,4 +17,9 @@
             Uppdaterad senast {{ sensor.updated | date : "medium"}}
         </div>
     </div>
+    <div layout="row" layout-align="space-between center">
+        <div flex-xs="100">
+            <sensor-teaser-chart data="sensor.history"></sensor-teaser-chart>
+        </div>
+    </div>
 </div>
